--- a/main.css
+++ b/main.css
@@ -1,27 +1,109 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-body{
+
+body {
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    min-width: 1280px;
-    /*min-height: 768px;*/
     font-family: Arial;
     font-size: 16px;
+    min-width: 1280px;
 }
-nav{
+
+nav {
     width: 20%;
+    height: 100%;
     background: #090909;
     float: left;
+    position: relative;
 }
-article{
+
+header {
+    padding: 0px;
+    height: 300px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+header img{
+    height: 300px;
+}
+
+.menu_double {
+    min-height: 60%;
+    position: absolute;
+    top: 300px;
+    left: 0px;
+}
+
+article {
     width: 80%;
     background-image: url(images/bg.jpg);
     float: left;
-    min-width: 1024px;
-    /*min-height: 768px;*/
+}
+
+
+.menu_double > ul > li {
+    display: inline-block;
+    padding-left: 30px;
+    text-align: justify;
+    position: relative;
+    width: 100%;
+}
+
+.menu_double > ul > li:hover {
+    background-color: #FF8000;
+}
+
+.menu_double > ul > li > a {
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    padding: 0px;
+    line-height: 50px;
+    color: white;
+    font-size: 14px;
+    font-weight: 200;
+}
+
+.menu_double > ul {
+    padding: 0px;
+    width: 100%;
+    margin: 0px;
+    list-style: none;
+    text-align: center;
+}
+
+.menu_double ul ul {
+    position: absolute;
+    top: 1px;
+    display: none;
+    padding-left: 95%;
+    margin: 0px;
+    list-style: none;
+    width: 150%;
+}
+
+.menu_double ul ul a {
+    display: block;
+    line-height: 30px;
+    background: rgba(10, 10, 10, 0.8);
+    color: white;
+    font-weight: 200;
+    font-size: 14px;
+    text-decoration: none;
+    padding: 10px 10px;
+}
+
+.menu_double > ul > li:hover > ul {
+    float: top;
+    display: block;
+}
+
+.menu_double ul ul a:hover {
+    color: #FF0;
 }
 
 /*CSS menu 2 cấp*/
@@ -54,7 +136,6 @@ article{
     width: 100%;
     display: block;
     float: left;
-    padding: 10px 0;
 }
 
 .ulChildrent {
@@ -75,19 +156,31 @@ article{
 }
 
 /*css tìm kiếm */
+footer {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    max-height: 200px;
+    background: #090909;
+    min-height: 20%;
+}
+
 .logo {
     padding: 10px 0;
     text-align: center;
 }
-.logo a{
+
+.logo a {
     margin-right: 30px;
 }
+
 .tim input {
-    max-width:300px;
+    max-width: 300px;
     height: 34px;
     border-radius: 7px;
 }
-.tim{
+
+.tim {
     padding-left: 20px;
 }
 
@@ -98,44 +191,47 @@ article{
 }
 
 /*Tạo đồng hồ*/
-article{
+article {
     text-align: center;
     font-family: sans-serif;
     font-weight: 100;
+    max-width: 100%;
+    height: 100%;
 }
 
-#clockdiv{
+#clockdiv {
     font-family: sans-serif;
     color: #fff;
     display: inline-block;
     text-align: center;
     font-size: 50px;
-    padding-top: 150px;
+    padding-top: 90px;
 }
 
-#clockdiv > div{
+#clockdiv > div {
     padding: 10px;
     border-radius: 3px;
     display: inline-block;
 }
 
-#clockdiv div > span{
+#clockdiv div > span {
     padding: 15px;
     border-radius: 3px;
     display: inline-block;
 }
 
-.smalltext{
+.smalltext {
     padding-top: 5px;
     font-size: 16px;
 }
 
 /*Css information*/
-h6{
+h6 {
     padding-top: 70px;
 }
+
 /*css địa chỉ*/
-.menuinformation {
+.menu-information {
     list-style: none;
     display: inline-block;
     font-size: 23px;
@@ -155,19 +251,63 @@ h6{
     padding: 12px 14px;
     color: white;
 }
+
 /*Css slider tài trợ*/
-aside{
+aside {
     clear: both;
 }
-aside{
+
+aside {
     background-color: #b2a5a5;
     width: 95%;
-    min-width:500px ;
+    min-width: 500px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
     margin-left: 40px;
 }
-.slider img{
+
+.slider img {
     width: 150px;
+}
+
+.blockquote {
+    border: 10px solid rgba(243, 243, 243, .2);
+    padding: 20px;
+    color: #fff;
+    margin-top: 20px;
+    margin-left: 40px;
+    font-size: 14px;
+    text-align: justify;
+    background: rgba(33, 33, 33, 0.6);
+}
+
+.blockquote {
+    font-size: 15px;
+    color: #696969;
+    line-height: 24px;
+    display: block;
+    width: 1000px;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
+
+#section0 {
+    background-image: url("imgs/about_bg.jpg");
+    padding-left: 100px;
+}
+
+.author {
+    font-style: italic;
+    font-size: 13px;
+}
+
+#section2{
+    background-image: url("images/bg.jpg");
+}
+
+#section1{
+    background-image: url("images/about_bg2.jpg");
 }
